fixed projects title spacing

--- a/src/Sections/ResumeBuilder/ResumeBuilder.css
+++ b/src/Sections/ResumeBuilder/ResumeBuilder.css
@@ -68,6 +68,7 @@
     align-items: flex-start;
     width: 120px;
     margin-right: 50px;
+    min-width: 104px;
 }
 
 .resume-section-title h3 {
